// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewerContainer does not break on empty configs 1`] = `""`;

exports[`ViewerContainer renders a viewer of type CONFUSION_MATRIX 1`] = `
<ConfusionMatrix
  configs={
    Array [
      Object {
        "type": "confusion_matrix",
      },
    ]
  }
/>
`;

exports[`ViewerContainer renders a viewer of type MARKDOWN 1`] = `
<MarkdownViewer
  configs={
    Array [
      Object {
        "type": "markdown",
      },
    ]
  }
/>
`;

exports[`ViewerContainer renders a viewer of type ROC 1`] = `
<ROCCurve
  configs={
    Array [
      Object {
        "type": "roc",
      },
    ]
  }
/>
`;

exports[`ViewerContainer renders a viewer of type TABLE 1`] = `
<PagedTable
  configs={
    Array [
      Object {
        "type": "table",
      },
    ]
  }
/>
`;

exports[`ViewerContainer renders a viewer of type TENSORBOARD 1`] = `
<withI18nextTranslation(TensorBoardViewer)
  configs={
    Array [
      Object {
        "type": "tensorboard",
      },
    ]
  }
/>
`;

exports[`ViewerContainer renders a viewer of type VISUALIZATION_CREATOR 1`] = `
<VisualizationCreator
  configs={
    Array [
      Object {
        "type": "visualization-creator",
      },
    ]
  }
/>
`;

exports[`ViewerContainer renders a viewer of type WEB_APP 1`] = `
<HTMLViewer
  configs={
    Array [
      Object {
        "type": "web-app",
      },
    ]
  }
/>
`;
